# trajectory_publisher

./: .gitignore
logs/: 2019-12-18-17-09-38.bag
src/trajectory_publisher/: CMakeLists.txt  package.xml  realExpriment1-smooth.csv  realExpriment2-smooth.csv  realexpMap1-astar.csv  realexpMap2-astar.csv  result.csv
src/trajectory_publisher/script/: dashgo_driver.py  result.csv  speed_control.py  traj_publish.py
src/trajectory_publisher/src/: make.bash  trajectory_publish.cpp
